@@ -33,8 +33,6 @@
 
 // MACROS ------------------------------------------------------------------
 
-#define PATHSEPERATOR	'/'
-
 // TYPES -------------------------------------------------------------------
 
 // EXTERNAL FUNCTION PROTOTYPES --------------------------------------------
